--- a/PreferencesKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/PreferencesKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Nov 29 06:14:44 AM EST 2024
+#Sun Dec  8 04:01:21 EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
