--- a/AppWidget/gradle/wrapper/gradle-wrapper.properties
+++ b/AppWidget/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Dec 18 05:59:20 AM EST 2024
+#Mon Dec 30 03:19:14 EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-all.zip
 distributionPath=wrapper/dists
