--- a/DarkTheme/gradle/wrapper/gradle-wrapper.properties
+++ b/DarkTheme/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Dec 18 06:16:04 AM EST 2024
+#Mon Dec 30 03:47:38 EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
