--- a/ImmersiveMode/gradle/wrapper/gradle-wrapper.properties
+++ b/ImmersiveMode/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Dec 19 03:19:01 EST 2024
+#Mon Dec 30 05:17:55 AM EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
