--- a/People/gradle/wrapper/gradle-wrapper.properties
+++ b/People/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat Jan 11 06:20:23 AM EST 2025
+#Fri Jan 24 04:28:26 EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
