--- a/InteractiveSliceProviderKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/InteractiveSliceProviderKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Thu Feb 20 04:45:33 EST 2025
+#Wed Mar  5 06:58:34 AM EST 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.10.2-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.11.1-all.zip
