--- a/AppWidget/gradle/wrapper/gradle-wrapper.properties
+++ b/AppWidget/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Mar 17 03:51:20 EDT 2025
+#Fri Mar 28 07:16:40 AM EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.11.1-all.zip
 distributionPath=wrapper/dists
