--- a/ClippingBasic/gradle/wrapper/gradle-wrapper.properties
+++ b/ClippingBasic/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Mar 17 04:08:03 EDT 2025
+#Fri Mar 28 07:43:28 AM EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
