--- a/WindowManager/gradle/wrapper/gradle-wrapper.properties
+++ b/WindowManager/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat Mar 29 06:38:49 AM EDT 2025
+#Sun Apr  6 04:39:51 EDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.11.1-all.zip
